# src/controllers/user/LoginUserController.ts
@@ -51,9 +51,7 @@ export class LoginUserController {
             this.logger.info(`User Logged`, req.body.userEmail);
 
             res.setHeader('x-access-token', user.getAccessToken());
-            res.setHeader('x-refresh-token', user.getRefreshToken());
             res.setHeader('x-access-token-expiration', String(user.getAccessTokenExpiration()));
-            res.setHeader('x-refresh-token-expiration', String(user.getRefreshTokenExpiration()));
 
             return res.status(201).json({
                 user,
